Menambahkan konten tentang kami, kuis, beranda dan menambahkan icon title di halaman

--- a/app/baca-materi.html
+++ b/app/baca-materi.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+    <link rel="icon" href="../assets/images/logo-round.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/style/base.css">
-    <link rel="stylesheet" href="../assets/style/index.css">
 
     <title>Baca Materi</title>
 </head>
