--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+    <link rel="icon" href="../assets/images/logo-round.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/style/base.css">
     <link rel="stylesheet" href="../assets/style/index.css">
 
@@ -39,24 +39,207 @@
                         ut labore et dolore magna aliquyam erat, sed diam.
                     </p>
                     <div class="headline-button">
-                        <a href="materi.html?menu=materi" class="button-light-bg text-nodecoration text-bold">Mulai
+                        <a href="mata-kuliah.html?menu=materi" class="button-light-bg text-nodecoration text-bold">Mulai
                             Jelajah</a>
                     </div>
                 </div>
 
                 <div class="content-material-container">
                     <div class="content-material">
-                        <img src="../assets/images/cobu.jpg" alt="" style="width:30rem;margin-bottom:-5rem;">
+
+                        <div class="card-recommendation">
+                            <span class="card-recommendation-heading" align="center">Struktur Data</span>
+                            <div class="card-recommendation-content">
+                                <div class="card-recommendation-title text-primary-color text-bold">DAFTAR MATERI</div>
+                                <ul class="no-bullet">
+                                    <li>
+                                        <span class="card-recommendation-content-title">Struktur Data Stack</span>
+                                        <p class="card-recommendation-description">This is description of the content
+                                            material</p>
+                                    </li>
+                                    <li>
+                                        <span class="card-recommendation-content-title">Struktur Data Queues</span>
+                                        <p class="card-recommendation-description">This is description of the content
+                                            material</p>
+                                    </li>
+                                    <li>
+                                        <span class="card-recommendation-content-title">Struktur Data Deques</span>
+                                        <p class="card-recommendation-description">This is description of the content
+                                            material</p>
+                                    </li>
+                                </ul>
+                            </div>
+                            <a class="direct-material display-inline-block text-light-color"
+                                href="materi.html?menu=materi&mata-kuliah=struktur-data" align="center">Lihat Materi
+                                &#x21E8;</a>
+                        </div>
+
+
+
+                        <div class="card-recommendation">
+                            <span class="card-recommendation-heading" align="center">Algoritma Dasar</span>
+                            <div class="card-recommendation-content">
+                                <div class="card-recommendation-title text-primary-color text-bold">DAFTAR MATERI</div>
+                                <ul class="no-bullet">
+                                    <li>
+                                        <span class="card-recommendation-content-title">Struktur Data Stack</span>
+                                        <p class="card-recommendation-description">This is description of the content
+                                            material</p>
+                                    </li>
+                                    <li>
+                                        <span class="card-recommendation-content-title">Struktur Data Queues</span>
+                                        <p class="card-recommendation-description">This is description of the content
+                                            material</p>
+                                    </li>
+                                    <li>
+                                        <span class="card-recommendation-content-title">Struktur Data Deques</span>
+                                        <p class="card-recommendation-description">This is description of the content
+                                            material</p>
+                                    </li>
+                                </ul>
+                            </div>
+                            <a class="direct-material display-inline-block text-light-color"
+                                href="materi.html?menu=materi&mata-kuliah=algoritma-dasar" align="center">Lihat Materi
+                                &#x21E8;</a>
+                        </div>
+
+
                     </div>
                 </div>
 
 
             </div>
 
-            <div class="content-code">int day = 4;<br>switch (day) {<br>&ensp;case
-                1:<br>&ensp;&ensp;System.out.println("Monday");<br>&ensp;&ensp;break;<br>&ensp;case
-                2:<br>&ensp;&ensp;System.out.println("Tuesday");
+
+            <div class="list-material mb-4">
+                <span class="title-info title-info-primary mt-4" align="center">MATERI PALING BANYAK DIBACA</span>
+                <div class="content-container">
+                    <div class="content-material corner-round bg-gradient-color">
+                        <div id="list-materi" class="content-list-material">
+
+                            <div class="card-material">
+                                <div class="container-card-material">
+                                    <div class="card-material-cover">
+                                        <div class="card-material-image"></div>
+                                    </div>
+                                    <div class="card-material-info">
+                                        <span class="card-material-subject">Struktur Data</span>
+                                        <span class="card-material-title">Struktur Data Queue</span>
+                                        <p class="card-material-description">
+                                            Queue atau Antrian merupakan struktur data yang bisa direpresentasikan
+                                            secara kontigu maupun dengan pointer. Struktur data ini menganut prinsip
+                                            FIFO (First-In-First-Out / Masuk Pertama Keluar Pertama), sama seperti
+                                            antrian pada dunia nyata.
+                                        </p>
+                                        <a href="baca-materi.html?menu=materi&mata-kuliah=struktur-data&materi=struktur-data-stack"
+                                            class="card-material-button display-inline-block text-nodecoration">
+                                            <div class="button-primary-bg">Baca Materi</div>
+                                        </a>
+                                    </div>
+
+                                </div>
+                            </div>
+
+
+                            <div class="card-material">
+                                <div class="container-card-material">
+                                    <div class="card-material-cover">
+                                        <div class="card-material-image"></div>
+                                    </div>
+                                    <div class="card-material-info">
+                                        <span class="card-material-subject">Struktur Data</span>
+                                        <span class="card-material-title">Struktur Data Queue</span>
+                                        <p class="card-material-description">
+                                            Queue atau Antrian merupakan struktur data yang bisa direpresentasikan
+                                            secara kontigu maupun dengan pointer. Struktur data ini menganut prinsip
+                                            FIFO (First-In-First-Out / Masuk Pertama Keluar Pertama), sama seperti
+                                            antrian pada dunia nyata.
+                                        </p>
+                                        <a href="baca-materi.html?menu=materi&mata-kuliah=struktur-data&materi=struktur-data-stack"
+                                            class="card-material-button display-inline-block text-nodecoration">
+                                            <div class="button-primary-bg">Baca Materi</div>
+                                        </a>
+                                    </div>
+
+                                </div>
+                            </div>
+
+
+                            <div class="card-material">
+                                <div class="container-card-material">
+                                    <div class="card-material-cover">
+                                        <div class="card-material-image"></div>
+                                    </div>
+                                    <div class="card-material-info">
+                                        <span class="card-material-subject">Struktur Data</span>
+                                        <span class="card-material-title">Struktur Data Queue</span>
+                                        <p class="card-material-description">
+                                            Queue atau Antrian merupakan struktur data yang bisa direpresentasikan
+                                            secara kontigu maupun dengan pointer. Struktur data ini menganut prinsip
+                                            FIFO (First-In-First-Out / Masuk Pertama Keluar Pertama), sama seperti
+                                            antrian pada dunia nyata.
+                                        </p>
+                                        <a href="baca-materi.html?menu=materi&mata-kuliah=struktur-data&materi=struktur-data-stack"
+                                            class="card-material-button display-inline-block text-nodecoration">
+                                            <div class="button-primary-bg">Baca Materi</div>
+                                        </a>
+                                    </div>
+
+                                </div>
+                            </div>
+
+
+
+
+                        </div>
+
+
+                    </div>
+                </div>
+
             </div>
+
+            <div class="list-subject">
+                <span class="title-info title-info-primary mt-4 mb-4" align="center">MATA KULIAH PALING BANYAK
+                    DILIHAT</span>
+                <div id="list-matkul" class="content-list-subject">
+
+
+                    <div class="card-horizontal">
+                        <div class="card-horizontal-container">
+
+                            <div class="card-horizontal-cover">
+                                <div id="card-image" class="card-horizontal-image bg-accent-color"></div>
+                            </div>
+
+                            <div class="card-horizontal-info">
+                                <span class="card-horizontal-title">
+                                    Struktur Data
+                                </span>
+                                <p class="card-horizontal-description opacity70">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum
+                                    has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                    printer took a galley of type and scrambled it to make a type specimen book. It has
+                                    survived not only five centuries, but also the leap into electronic typesetting,
+                                    remaining essentially unchanged. It was popularised in the 1960s with the release of
+                                    Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                </p>
+                                <a href="materi.html?menu=materi&mata-kuliah=struktur-data"
+                                    class="text-nodecoration text-bold">
+                                    <span class="button-primary-bg display-inline-block"> Lihat Materi</span>
+
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+
         </div>
         <!-- ===================== END CONTENT ===================== -->
 
@@ -65,7 +248,9 @@
         <div id="footer"></div>
         <!-- ===================== END FOOTER ===================== -->
         <!-- <script src="https://unpkg.com/@plant/plant@2.4.0/dist/plant.js"></script> -->
+        <script type="text/javascript" src="../assets/script/materi.js"></script>
         <script type="text/javascript" src="../assets/script/script.js"></script>
+        <script type="text/javascript" src="../assets/script/loadMaterial.js"></script>
 
     </div>
     <!-- ===================== END CONTAINER ===================== -->
