--- a/app/mata-kuliah.html
+++ b/app/mata-kuliah.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
+    <link rel="icon" href="../assets/images/logo-round.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/style/base.css">
-    <link rel="stylesheet" href="../assets/style/index.css">
 
     <title>Halaman Materi</title>
 </head>
@@ -30,11 +30,14 @@
         <section id="content">
 
 
+            <div class="content-headline center-element">
+                <span class="title-info title-info-light mt-4" align="center">MATA KULIAH</span>
+            </div>
             <!-- ===================== LIST MATA KULIAH ===================== -->
             <div class="content-container">
 
                 <div id="list-matkul" class="content-list-subject">
-
+                    <span class="title-info"></span>
                     <div class="card-horizontal">
                         <div class="card-horizontal-container">
 
