--- a/app/materi.html
+++ b/app/materi.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
+    <link rel="icon" href="../assets/images/logo-round.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/style/base.css">
-    <link rel="stylesheet" href="../assets/style/index.css">
 
     <title>Halaman Materi</title>
 </head>
@@ -28,7 +28,9 @@
 
         <!-- ===================== CONTENT ===================== -->
         <div id="content">
-
+            <div class="content-headline center-element">
+                <span id="subject-title" class="title-info title-info-light mt-4" align="center">DAFTAR MATERI</span>
+            </div>
             <div class="content-container">
                 <div class="content-material corner-round bg-gradient-color">
                     <h1 align="center" class="content-material-tag-title text-light-color">Daftar Materi</h1>
