--- a/app/tentang-kami.html
+++ b/app/tentang-kami.html
@@ -6,11 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+    <link rel="icon" href="../assets/images/logo-round.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/style/base.css">
-    <link rel="stylesheet" href="../assets/style/index.css">
 
-    <title>Halaman Materi</title>
+    <title>Halaman Tentang Kami</title>
 </head>
 
 <body>
@@ -28,6 +27,128 @@
 
         <!-- ===================== CONTENT ===================== -->
         <div id="content">
+
+            <div class="app-description text-light-color bg-gradient-color">
+                <div class="app-title text-bold">
+                    TENTANG KAMI
+                </div>
+                <div class="app-detailed-description opacity70">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                    invidunt
+                    ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                    At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+                    takimata sanctus est Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                    invidunt
+                    ut labore et dolore magna aliquyam erat, sed diam.
+                </div>
+            </div>
+
+            <div class="profile-list">
+
+                <span class="title-info title-info-primary" align="center">TEAM KAMI</span>
+
+                <div class="profile-info profile-info-right bg-gradient-color">
+
+                    <div class="profile-image">
+                        <img class="corner-round" src="../assets/images/bima-profile.jpg" alt="Foto Bima">
+                    </div>
+
+                    <div class=" profile-description">
+                        <span class="profile-name text-light-color text-bold">BIMA SATRIA ERLANGGA</span>
+                        <span class="profile-role text-light-color">UI DESIGNER, LEAD FRONT-END, & SYSTEM ANALYST</span>
+                        <p class="profile-detailed-description text-light-color opacity70">
+                            <!-- Sebagai UI Designer wajib untuk mengetahui dasar tentang dunia perdesainan dan pengalaman pengguna, tugas .  -->
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt
+                            ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+                            takimata sanctus est Lorem ipsum dolor sit amet.
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt
+                            ut labore et dolore magna aliquyam erat, sed diam.
+                        </p>
+                    </div>
+
+                </div>
+
+                <div class="profile-info profile-info-left bg-gradient-color">
+
+                    <div class=" profile-description">
+                        <span class="profile-name text-light-color text-bold">SYAYID AL AZIZ</span>
+                        <span class="profile-role text-light-color">LEAD CONTENT MAKER, SUPPORT FRONT-END, & DATA
+                            MANAGER</span>
+                        <p class="profile-detailed-description text-light-color opacity70">
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt
+                            ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+                            takimata sanctus est Lorem ipsum dolor sit amet.
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt
+                            ut labore et dolore magna aliquyam erat, sed diam.
+                        </p>
+                    </div>
+
+
+                    <div class="profile-image">
+                        <img class="corner-round" src="../assets/images/bima-profile.jpg" alt="Foto Bima">
+                    </div>
+
+                </div>
+
+
+                <div class="profile-info profile-info-right bg-gradient-color">
+
+                    <div class="profile-image">
+                        <img class="corner-round" src="../assets/images/raihan-profile.jpeg" alt="Foto Bima">
+                    </div>
+
+                    <div class=" profile-description">
+                        <span class="profile-name text-light-color text-bold">RAIHAN FADILLAH</span>
+                        <span class="profile-role text-light-color">CONTENT MAKER & SUPPORT FRONT-END</span>
+                        <p class="profile-detailed-description text-light-color opacity70">
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt
+                            ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+                            takimata sanctus est Lorem ipsum dolor sit amet.
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt
+                            ut labore et dolore magna aliquyam erat, sed diam.
+                        </p>
+                    </div>
+
+                </div>
+
+                <div class="profile-info profile-info-left bg-gradient-color">
+
+                    <div class=" profile-description">
+                        <span class="profile-name text-light-color text-bold">ALFARIZI THORIQUL AKBAR</span>
+                        <span class="profile-role text-light-color">CONTENT MAKER & ART ASSETS MAKER</span>
+                        <p class="profile-detailed-description text-light-color opacity70">
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt
+                            ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+                            takimata sanctus est Lorem ipsum dolor sit amet.
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                            invidunt
+                            ut labore et dolore magna aliquyam erat, sed diam.
+                        </p>
+                    </div>
+
+
+                    <div class="profile-image">
+                        <img class="corner-round" src="../assets/images/bima-profile.jpg" alt="Foto Bima">
+                    </div>
+
+                </div>
+
+
+
+            </div>
+
 
         </div>
         <!-- ===================== END CONTENT ===================== -->
