--- a/app/kuis.html
+++ b/app/kuis.html
@@ -8,9 +8,8 @@
 
 
     <link rel="stylesheet" href="../assets/style/base.css">
-    <link rel="stylesheet" href="../assets/style/index.css">
 
-    <title>Halaman Materi</title>
+    <title>Halaman Kuis</title>
 </head>
 
 <body>
@@ -29,6 +28,41 @@
         <!-- ===================== CONTENT ===================== -->
         <div id="content">
 
+
+            <h1>Kuis Title</h1>
+            <div class="container">
+                <br>
+                <h3 id="question">Question</h3>
+                <br>
+                <div class="input" id="quiz">
+                    <ul>
+                        <li>
+                            <input type="radio" name="answer" id="a" class="answer" />
+                            <label for="a" id="a_text">Answer...</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="answer" id="b" class="answer" />
+                            <label for="b" id="b_text">Answer...</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="answer" id="c" class="answer" />
+                            <label for="c" id="c_text">Answer...</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="answer" id="d" class="answer" />
+                            <label for="d" id="d_text">Answer...</label>
+                        </li>
+                    </ul>
+                    <br>
+                </div>
+            </div>
+            <div class="input">
+                <br>
+                <button id="submit">Selanjutnya</button>
+            </div>
+
+
+
         </div>
         <!-- ===================== END CONTENT ===================== -->
 
@@ -40,6 +74,7 @@
         <!-- ===================== END FOOTER ===================== -->
 
         <script type="text/javascript" src="../assets/script/script.js"></script>
+        <script type="text/javascript" src="../assets/script/kuis.js"></script>
 
     </div>
     <!-- ===================== END CONTAINER ===================== -->
