Merubah tampilan halaman kuis ketika memilih jawaban quiz, menambahkan fungsi menghitung jumlah objek javascript

--- a/app/baca-materi.html
+++ b/app/baca-materi.html
@@ -51,7 +51,16 @@
                 <div id="material-content" class="material-content">
 
                 </div>
-
+                <!-- <div class="material-control">
+                    <a id="previous-material"
+                        href="baca-materi.html?menu=materi&matkul=struktur-data&materi=struktur-data-stack"
+                        class="hidden">Materi
+                        Sebelumnya</a>
+                    <a id="next-material"
+                        href="baca-materi.html?menu=materi&matkul=struktur-data&materi=struktur-data-stack"
+                        class="hidden">Materi
+                        Selanjutnya</a>
+                </div> -->
             </div>
         </div>
         <!-- ===================== END CONTENT ===================== -->
@@ -60,7 +69,8 @@
 
 
         <!-- ===================== FOOTER ===================== -->
-        <div id="footer"></div>
+        <div id="footer">
+        </div>
         <!-- ===================== END FOOTER ===================== -->
 
 
