Menambahkan next & previous materi(halaman Baca Materi), memperbaiki base_url generator, memperbaiki css onload page & merestruktur object materi

--- a/app/baca-materi.html
+++ b/app/baca-materi.html
@@ -51,16 +51,18 @@
                 <div id="material-content" class="material-content">
 
                 </div>
-                <!-- <div class="material-control">
+
+                <div class="material-control">
                     <a id="previous-material"
                         href="baca-materi.html?menu=materi&matkul=struktur-data&materi=struktur-data-stack"
-                        class="hidden">Materi
+                        class="hidden button-accent-bg text-nodecoration">&#x21E6; Materi
                         Sebelumnya</a>
                     <a id="next-material"
                         href="baca-materi.html?menu=materi&matkul=struktur-data&materi=struktur-data-stack"
-                        class="hidden">Materi
-                        Selanjutnya</a>
-                </div> -->
+                        class="hidden button-accent-bg text-nodecoration">Materi
+                        Selanjutnya &#x21E8;</a>
+                </div>
+
             </div>
         </div>
         <!-- ===================== END CONTENT ===================== -->
